# Board-Game-Finder

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dags/: api_extract.py  bucket_to_bigquery_load.py  dbt_transform.py  test_connection.py
dbt_bgf/: dbt_project.yml
dbt_bgf/models/: mart_dashboard.sql  schema.yml
dbt_bgf/models/mart/: mart_game_selector.sql  schema.yml
dbt_bgf/models/source/: bgf_source.yml
dbt_bgf/models/staging/: game_recommendations.sql  games.sql  schema.yml  stg_game_category.sql  stg_game_mechanics.sql  stg_game_ratings.sql  stg_game_recommendations.sql  stg_game_theme.sql  stg_games.sql
logs/scheduler/: latest
scripts/: data-script.py  init_connections.sh
