[tool.poetry]
name = "board-game-finder"
version = "0.1.0"
description = "\"Our Project\""
authors = ["Erman Torun <etorun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dbt-bigquery = "^1.8.3"
apache-airflow = ">=2.5.0,<2.6.0"
dbt-core = "^1.8.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
