[tool.poetry]
name = "board-game-finder"
version = "0.1.0"
description = "\"Our Project\""
authors = ["Erman Torun <etorun@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
dbt-bigquery = "^1.8.3"
apache-airflow = ">=2.5.0,<2.6.0"
dbt-core = "^1.8.8"
apache-airflow-providers-postgres = "4.1.0"
pandas = "1.4.2"
pyarrow = "8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
